# pybvrf

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: check_license_headers.py  check_uv_build.py
.github/workflows/: check.yml  check_uv_build.yml  release.yml  test.yml
src/pybvrf/: BVRFHeader-1.0.0.json  __init__.py  export.py  mne.py  mne_io.py  pybvrf.py  utils.py
tests/: test_pybvrf.py
