[build-system]
requires = ["uv_build >= 0.11.6, < 0.12.0"]
build-backend = "uv_build"

[project]
name = "pybvrf"
version = "0.1.3"
description = "A Python package for working with BrainVision Recording Format (BVRF) files."
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Clemens Brunner", email = "clemens.brunner@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["brainvision", "bvrf", "eeg", "neuroscience", "data format", "reader"]
dependencies = [
    "jsonschema>=4.26.0",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
mne = ["mne>=1.12.0"]

[dependency-groups]
dev = [
    "mne>=1.12.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[project.urls]
homepage = "https://github.com/cbrnr/pybvrf"
repository = "https://github.com/cbrnr/pybvrf"
changelog = "https://github.com/cbrnr/pybvrf/blob/main/CHANGELOG.md"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP", "W"]
